--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,7 @@ $sans-serif: "Arial", "PingFang SC", "Microsoft Yahei", "SimSun", sans-serif;
 
 $serif: "Arial", "PingFang SC", "SimSun", serif;
 
-$img: url(http://pic.lvmama.com/img/lv/calendar.png);
+$img: url(../../img/lv/calendar.png);
 
 $border-width: 1px;
 $input-border-width: $border-width;
