--- a/scss/tips.scss
+++ b/scss/tips.scss
@@ -57,7 +57,7 @@
   i {
     width: 11px;
     height: 11px;
-    background-image: url(http://pic.lvmama.com/img/lv/icon.png);
+    background-image: url(../../img/lv/icon.png);
     background-position: -240px -200px;
     display: block;
   }
