--- a/scss/ui.scss
+++ b/scss/ui.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-$ui-bg: url(http://pic.lvmama.com/img/lv/ui.png);
+$ui-bg: url(../../img/lv/ui.png);
 
 .nova-checkbox-label {
   margin-right: 10px;
