--- a/css/icons.css
+++ b/css/icons.css
@@ -1,5 +1,5 @@
 /*! tips.scss 2016-07-17 Sheng Jiang 1.0.0.0 */
-.nova-icon-xl, .nova-icon-lg, .nova-icon, .nova-icon-sm, .nova-icon-xs, .nova-icon-outline-xl, .nova-icon-outline-lg, .nova-icon-outline, .nova-icon-outline-sm, .nova-icon-outline-xs { display: inline-block; background-image: url(http://pic.lvmama.com/img/lv/icon.png); vertical-align: middle; }
+.nova-icon-xl, .nova-icon-lg, .nova-icon, .nova-icon-sm, .nova-icon-xs, .nova-icon-outline-xl, .nova-icon-outline-lg, .nova-icon-outline, .nova-icon-outline-sm, .nova-icon-outline-xs { display: inline-block; background-image: url(../../img/lv/icon.png); vertical-align: middle; }
 
 /*region 48*/
 .nova-icon-xl, .nova-icon-outline-xl { width: 48px; height: 48px; }
