--- a/scss/calendar.scss
+++ b/scss/calendar.scss
@@ -23,7 +23,7 @@
   width: 14px;
   height: 14px;
   margin-right: 5px;
-  background: url(http://pic.lvmama.com/img/lv/icon.png) -240px -220px;
+  background: url(../../img/lv/icon.png) -240px -220px;
   vertical-align: -3px;
 }
 
@@ -89,7 +89,7 @@
     top: 0;
     right: 0;
     bottom: 0;
-    background: #fff url(http://pic.lvmama.com/img/new_v/ui_scrollLoading/loadingGIF46px.gif) no-repeat center center;
+    background: #fff url(../../img/new_v/ui_scrollLoading/loadingGIF46px.gif) no-repeat center center;
     position: absolute;
     overflow: hidden;
     font-size: 200px;
@@ -520,10 +520,10 @@
     vertical-align: top;
   }
   .sat {
-    /*border-right: 2px solid #fff;*/
+    border-right: 2px solid #fff;
   }
   .sun {
-    /*border-left: 1px solid #fff;*/
+    border-left: 1px solid #fff;
   }
   .date {
     position: absolute;
