--- a/scss/icons.scss
+++ b/scss/icons.scss
@@ -19,8 +19,7 @@
 .nova-icon-outline-sm,
 .nova-icon-outline-xs {
   display: inline-block;
-  background-image: url(http://pic.lvmama.com/img/lv/icon.png);
-  //background-image: url(../../../img/lv/icon.png);
+  background-image: url(../../img/lv/icon.png);
   vertical-align: middle;
 }
 
