--- a/docs/css/docs.css
+++ b/docs/css/docs.css
@@ -121,7 +121,7 @@ a[target=_blank]:hover:after {
 }
 
 #logo {
-    background-image: url(../../img/nova.png);
+    background-image: url(../../img/lv/nova.png);
     width: 110px;
     height: 80px;
     text-indent: -9999em;
