--- a/scss/ui.scss
+++ b/scss/ui.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 $ui-bg: url(../../img/lv/ui.png);
+$ui-bg2x: url(../../img/lv/ui@2x.png);
 
 .nova-checkbox-label {
   margin-right: 10px;
@@ -27,7 +28,7 @@ $ui-bg: url(../../img/lv/ui.png);
   width: 13px;
   height: 13px;
   display: inline-block;
-  background: $ui-bg;
+  background-image: $ui-bg;
   background-position: 0 0;
   &.nova-checked {
     background-position: 0 -40px;
@@ -79,7 +80,7 @@ $ui-bg: url(../../img/lv/ui.png);
   width: 13px;
   height: 13px;
   display: inline-block;
-  background: $ui-bg;
+  background-image: $ui-bg;
   background-position: 0 -60px;
   &.nova-checked {
     background-position: 0 -100px;
@@ -110,11 +111,15 @@ $ui-bg: url(../../img/lv/ui.png);
   &.opened {
     position: relative;
     .nova-select-dropdown {
-      display: block;
+      //display: block;
     }
   }
   &.disabled {
-    background-color: #cccccc;
+    color: #bbbbbb;
+    background-color: #f9f9f9;
+    .nova-select-toggle i {
+      background-position: -40px -110px;
+    }
   }
 }
 
@@ -151,6 +156,9 @@ $ui-bg: url(../../img/lv/ui.png);
 }
 
 .nova-select-dropdown {
+  cursor: default;
+  font-size: 14px;
+  line-height: 30px;
   margin-top: -1px;
   background-color: #fff;
   width: 186px;
@@ -160,6 +168,28 @@ $ui-bg: url(../../img/lv/ui.png);
   position: absolute;
   display: none;
   z-index: 1;
+
+  &::-webkit-scrollbar {
+    width: 7px;
+    background: #e3e3e3;
+    border-radius: 5px;
+  }
+
+  &::-webkit-scrollbar-track,
+  &::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    min-height: 20px;
+    background-clip: content-box;
+    box-shadow: 0 0 0 5px #bbbbbb inset;
+  }
+
+  &::-webkit-scrollbar-corner {
+    background: transparent;
+  }
+
 }
 
 .nova-select-optgroup-label {
@@ -176,6 +206,7 @@ $ui-bg: url(../../img/lv/ui.png);
 }
 
 .nova-select-option:hover {
+  color: #ee3388;
   background-color: #fef2f9;
 }
 
@@ -236,14 +267,14 @@ $ui-bg: url(../../img/lv/ui.png);
     margin: 8px;
   }
   &:hover {
-      position: relative;
-      border-color: #ff9900;
-      background: #fffaee;
+    position: relative;
+    border-color: #ff9900;
+    background: #fffaee;
   }
   &.disabled:hover {
-      position: static;
-      border-color: #cccccc;
-      background: inherit;
+    position: static;
+    border-color: #cccccc;
+    background: inherit;
   }
 }
 
@@ -352,4 +383,46 @@ $ui-bg: url(../../img/lv/ui.png);
     top: 0;
     left: 0;
   }
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (min--moz-device-pixel-ratio: 1.5),
+only screen and (min-device-pixel-ratio: 1.5) {
+  /* 当设备像素比不小于1.5的时候... */
+
+  .nova-checkbox {
+    background-image: $ui-bg2x;
+    background-size: 200px;
+  }
+
+  .nova-radio {
+    background-image: $ui-bg2x;
+    background-size: 200px;
+  }
+  .nova-select-toggle {
+    i {
+      background-image: $ui-bg2x;
+      background-size: 200px;
+    }
+
+  }
+
+  .nova-number-box-subtract,
+  .nova-number-box-add {
+    i {
+      background-image: $ui-bg2x;
+      background-size: 200px;
+    }
+  }
+
+  .nova-checkbox-label-bordered {
+
+    .nova-checkbox {
+      &.nova-checked {
+        background-image: $ui-bg2x;
+        background-size: 200px;
+      }
+    }
+  }
+
 }
