--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,8 @@ $sans-serif: "Arial", "PingFang SC", "Microsoft Yahei", "SimSun", sans-serif;
 
 $serif: "Arial", "PingFang SC", "SimSun", serif;
 
-$img: url(../../img/lv/calendar.png);
+$img-cal: url(../../img/lv/calendar.png);
+$img-cal2x: url(../../img/lv/calendar@2x.png);
 
 $border-width: 1px;
 $input-border-width: $border-width;
