--- a/assets/css/icons.css
+++ b/assets/css/icons.css
@@ -1,6 +1,38 @@
+@charset "UTF-8";
 /*! tips.scss 2016-07-17 Sheng Jiang 1.0.0.0 */
 .nova-icon-xl, .nova-icon-lg, .nova-icon, .nova-icon-sm, .nova-icon-xs, .nova-icon-outline-xl, .nova-icon-outline-lg, .nova-icon-outline, .nova-icon-outline-sm, .nova-icon-outline-xs { display: inline-block; background-image: url(../../img/lv/icon.png); vertical-align: middle; }
 
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) { /* 当设备像素比不小于1.5的时候... */
+  .nova-icon-xl, .nova-icon-lg, .nova-icon, .nova-icon-sm, .nova-icon-xs, .nova-icon-outline-xl, .nova-icon-outline-lg, .nova-icon-outline, .nova-icon-outline-sm, .nova-icon-outline-xs { background-image: url(../../img/lv/icon@2x.png); background-size: 400px; } }
+
+/*region 24*/
+.nova-icon, .nova-icon-outline { width: 24px; height: 24px; }
+
+.nova-icon-outline { background-position: -200px 0; }
+
+.nova-icon-outline.nova-icon-success { background-position: -200px 0; }
+
+.nova-icon-outline.nova-icon-error { background-position: -200px -40px; }
+
+.nova-icon-outline.nova-icon-warning { background-position: -200px -80px; }
+
+.nova-icon-outline.nova-icon-info { background-position: -200px -120px; }
+
+.nova-icon-outline.nova-icon-help { background-position: -200px -160px; }
+
+.nova-icon { background-position: -240px 0; }
+
+.nova-icon.nova-icon-success { background-position: -240px 0; }
+
+.nova-icon.nova-icon-error { background-position: -240px -40px; }
+
+.nova-icon.nova-icon-warning { background-position: -240px -80px; }
+
+.nova-icon.nova-icon-info { background-position: -240px -120px; }
+
+.nova-icon.nova-icon-help { background-position: -240px -160px; }
+
+/*endregion*/
 /*region 48*/
 .nova-icon-xl, .nova-icon-outline-xl { width: 48px; height: 48px; }
 
@@ -55,34 +87,6 @@
 .nova-icon-lg.nova-icon-info { background-position: -160px -120px; }
 
 .nova-icon-lg.nova-icon-help { background-position: -160px -160px; }
-
-/*endregion*/
-/*region 24*/
-.nova-icon, .nova-icon-outline { width: 24px; height: 24px; }
-
-.nova-icon-outline { background-position: -200px 0; }
-
-.nova-icon-outline.nova-icon-success { background-position: -200px 0; }
-
-.nova-icon-outline.nova-icon-error { background-position: -200px -40px; }
-
-.nova-icon-outline.nova-icon-warning { background-position: -200px -80px; }
-
-.nova-icon-outline.nova-icon-info { background-position: -200px -120px; }
-
-.nova-icon-outline.nova-icon-help { background-position: -200px -160px; }
-
-.nova-icon { background-position: -240px 0; }
-
-.nova-icon.nova-icon-success { background-position: -240px 0; }
-
-.nova-icon.nova-icon-error { background-position: -240px -40px; }
-
-.nova-icon.nova-icon-warning { background-position: -240px -80px; }
-
-.nova-icon.nova-icon-info { background-position: -240px -120px; }
-
-.nova-icon.nova-icon-help { background-position: -240px -160px; }
 
 /*endregion*/
 /*region 18*/
