--- a/scss/icons.scss
+++ b/scss/icons.scss
@@ -23,6 +23,72 @@
   vertical-align: middle;
 }
 
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (min--moz-device-pixel-ratio: 1.5),
+only screen and (min-device-pixel-ratio: 1.5) {
+  /* 当设备像素比不小于1.5的时候... */
+  .nova-icon-xl,
+  .nova-icon-lg,
+  .nova-icon,
+  .nova-icon-sm,
+  .nova-icon-xs,
+  .nova-icon-outline-xl,
+  .nova-icon-outline-lg,
+  .nova-icon-outline,
+  .nova-icon-outline-sm,
+  .nova-icon-outline-xs {
+    background-image: url(../../img/lv/icon@2x.png);
+    background-size: 400px;
+  }
+}
+
+/*region 24*/
+.nova-icon,
+.nova-icon-outline {
+  width: 24px;
+  height: 24px;
+}
+
+.nova-icon-outline {
+  background-position: -200px 0;
+  &.nova-icon-success {
+    background-position: -200px 0;
+  }
+  &.nova-icon-error {
+    background-position: -200px -40px;
+  }
+  &.nova-icon-warning {
+    background-position: -200px -80px;
+  }
+  &.nova-icon-info {
+    background-position: -200px -120px;
+  }
+  &.nova-icon-help {
+    background-position: -200px -160px;
+  }
+}
+
+.nova-icon {
+  background-position: -240px 0;
+  &.nova-icon-success {
+    background-position: -240px 0;
+  }
+  &.nova-icon-error {
+    background-position: -240px -40px;
+  }
+  &.nova-icon-warning {
+    background-position: -240px -80px;
+  }
+  &.nova-icon-info {
+    background-position: -240px -120px;
+  }
+  &.nova-icon-help {
+    background-position: -240px -160px;
+  }
+}
+
+/*endregion*/
+
 /*region 48*/
 .nova-icon-xl,
 .nova-icon-outline-xl {
@@ -112,53 +178,6 @@
   }
   &.nova-icon-help {
     background-position: -160px -160px;
-  }
-}
-
-/*endregion*/
-
-/*region 24*/
-.nova-icon,
-.nova-icon-outline {
-  width: 24px;
-  height: 24px;
-}
-
-.nova-icon-outline {
-  background-position: -200px 0;
-  &.nova-icon-success {
-    background-position: -200px 0;
-  }
-  &.nova-icon-error {
-    background-position: -200px -40px;
-  }
-  &.nova-icon-warning {
-    background-position: -200px -80px;
-  }
-  &.nova-icon-info {
-    background-position: -200px -120px;
-  }
-  &.nova-icon-help {
-    background-position: -200px -160px;
-  }
-}
-
-.nova-icon {
-  background-position: -240px 0;
-  &.nova-icon-success {
-    background-position: -240px 0;
-  }
-  &.nova-icon-error {
-    background-position: -240px -40px;
-  }
-  &.nova-icon-warning {
-    background-position: -240px -80px;
-  }
-  &.nova-icon-info {
-    background-position: -240px -120px;
-  }
-  &.nova-icon-help {
-    background-position: -240px -160px;
   }
 }
 
