--- a/scss/ui.scss
+++ b/scss/ui.scss
@@ -16,7 +16,10 @@ $ui-bg2x: url(../../img/lv/ui@2x.png);
       background-position: 0 -40px;
     }
     .nova-checkbox.disabled {
-      background-position: 0 0;
+      background-position: -20px 0;
+    }
+    .nova-checked.disabled {
+      background-position: -60px 0;
     }
   }
 }
@@ -35,7 +38,11 @@ $ui-bg2x: url(../../img/lv/ui@2x.png);
   }
 
   &.disabled {
-    background-position: 0 0;
+    background-position: -20px 0;
+  }
+
+  &.nova-checked.disabled {
+    background-position: -60px 0;
   }
 }
 
@@ -44,6 +51,9 @@ $ui-bg2x: url(../../img/lv/ui@2x.png);
     &.nova-checked {
       background-position: -20px -40px;
     }
+    &.nova-checked.disabled {
+      background-position: -60px 0;
+    }
   }
   &:hover {
     .nova-checkbox {
@@ -51,6 +61,9 @@ $ui-bg2x: url(../../img/lv/ui@2x.png);
     }
     .nova-checkbox.nova-checked {
       background-position: -20px -40px;
+    }
+    .nova-checked.disabled {
+      background-position: -60px 0;
     }
   }
 }
@@ -68,7 +81,10 @@ $ui-bg2x: url(../../img/lv/ui@2x.png);
       background-position: 0 -100px;
     }
     .nova-radio.disabled {
-      background-position: 0 -60px;
+      background-position: -20px -60px;
+    }
+    .nova-checked.disabled {
+      background-position: -80px 0;
     }
   }
 }
@@ -85,6 +101,13 @@ $ui-bg2x: url(../../img/lv/ui@2x.png);
   &.nova-checked {
     background-position: 0 -100px;
   }
+  &.disabled {
+    background-position: -20px -60px;
+  }
+
+  &.nova-checked.disabled {
+    background-position: -80px 0;
+  }
 }
 
 .nova-radio-label-orange {
@@ -93,6 +116,9 @@ $ui-bg2x: url(../../img/lv/ui@2x.png);
     &.nova-checked {
       background-position: -20px -100px;
     }
+    &.nova-checked.disabled {
+      background-position: -80px 0;
+    }
   }
   &:hover {
     .nova-radio {
@@ -100,6 +126,9 @@ $ui-bg2x: url(../../img/lv/ui@2x.png);
     }
     .nova-radio.nova-checked {
       background-position: -20px -100px;
+    }
+    .nova-checked.disabled {
+      background-position: -80px 0;
     }
   }
 }
